--- a/jNotebooks/analyzingMigrationTrendsUsingPython.ipynb
+++ b/jNotebooks/analyzingMigrationTrendsUsingPython.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "migrate_data = pd.read_csv(\"C:\\Trina\\TRU\\Courses\\Fall-23\\Course_Projects\\ADSC1910_ProjectWork (ADS)\\interprovincial_migration.csv\")"
+    "migrate_data = pd.read_csv(\"interprovincial_migration.csv\")"
    ]
   },
   {
